--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Appointment.cs" />
     <Compile Include="Model\PlayAroundcs.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
