Added HealthcareDBConnection to allow connection to local database cs6232-g2

--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB\HealthcareDBConnection.cs" />
     <Compile Include="Model\Appointment.cs" />
     <Compile Include="Model\PlayAroundcs.cs" />
     <Compile Include="View\Form1.cs">
@@ -84,7 +85,6 @@
   <ItemGroup>
     <Folder Include="Controller\" />
     <Folder Include="DAL\" />
-    <Folder Include="DB\" />
     <Folder Include="UserControl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
