--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -48,8 +48,10 @@
   <ItemGroup>
     <Compile Include="Controller\HealthcareController.cs" />
     <Compile Include="DAL\AppointmentDAL.cs" />
+    <Compile Include="DAL\DoctorDAL.cs" />
     <Compile Include="DB\HealthcareDBConnection.cs" />
     <Compile Include="Model\Appointment.cs" />
+    <Compile Include="Model\Doctor.cs" />
     <Compile Include="Model\PlayAroundcs.cs" />
     <Compile Include="UserControls\AddAppointmentUserControl.cs">
       <SubType>UserControl</SubType>
