--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -84,6 +84,11 @@
     <Compile Include="Model\Test.cs" />
     <Compile Include="Model\State.cs" />
     <Compile Include="Model\Visit.cs" />
+    <Compile Include="mostperformed.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>mostperformed.xsd</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\AddAppointmentUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -170,14 +175,7 @@
     <Compile Include="View\UsernameCreationForm.Designer.cs">
       <DependentUpon>UsernameCreationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="_cs6232_g2DataSet.cs">
-      <DependentUpon>_cs6232_g2DataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="_cs6232_g2DataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>_cs6232_g2DataSet.xsd</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="MostPerformedTests.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -230,6 +228,17 @@
       <DependentUpon>UsernameCreationForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\HealthCare.exe.config" />
+    <None Include="mostperformed.xsc">
+      <DependentUpon>mostperformed.xsd</DependentUpon>
+    </None>
+    <None Include="mostperformed.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>mostperformed.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="mostperformed.xss">
+      <DependentUpon>mostperformed.xsd</DependentUpon>
+    </None>
     <None Include="obj\Release\HealthCare.csproj.CoreCompileInputs.cache" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -241,17 +250,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="_cs6232_g2DataSet.xsc">
-      <DependentUpon>_cs6232_g2DataSet.xsd</DependentUpon>
-    </None>
-    <None Include="_cs6232_g2DataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>_cs6232_g2DataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="_cs6232_g2DataSet.xss">
-      <DependentUpon>_cs6232_g2DataSet.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
