Changed connection string to work on local computer

--- a/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Model\Test.cs" />
     <Compile Include="Model\State.cs" />
     <Compile Include="Model\Visit.cs" />
-    <Compile Include="mostperformed.Designer.cs">
+    <Compile Include="Report\mostperformed.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>mostperformed.xsd</DependentUpon>
@@ -183,7 +183,7 @@
     <Compile Include="View\UsernameCreationForm.Designer.cs">
       <DependentUpon>UsernameCreationForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="MostPerformedTests.rdlc" />
+    <EmbeddedResource Include="Report\MostPerformedTests.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -239,15 +239,15 @@
       <DependentUpon>UsernameCreationForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\HealthCare.exe.config" />
-    <None Include="mostperformed.xsc">
+    <None Include="Report\mostperformed.xsc">
       <DependentUpon>mostperformed.xsd</DependentUpon>
     </None>
-    <None Include="mostperformed.xsd">
+    <None Include="Report\mostperformed.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>mostperformed.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="mostperformed.xss">
+    <None Include="Report\mostperformed.xss">
       <DependentUpon>mostperformed.xsd</DependentUpon>
     </None>
     <None Include="obj\Release\HealthCare.csproj.CoreCompileInputs.cache" />
