--- a/HealthCare/App.config
+++ b/HealthCare/App.config
@@ -4,10 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HealthCare.Properties.Settings.cs6232_g2ConnectionString"
-            connectionString="Data Source=MEGANBROWNPC;Initial Catalog=cs6232-g2;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="HealthCare.Properties.Settings.cs6232_g2ConnectionString1"
-            connectionString="Data Source=DELLAPP;Initial Catalog=cs6232-g2;Integrated Security=True"
+            connectionString="Data Source=.;Initial Catalog=cs6232-g2;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
